la funcionalidad del icno check funcional

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <ul class="cardsList" data-list></ul>
       </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script><!---api de fechas -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.2.0/uuid.min.js"></script> <!---un indicador unico -->
     <script type="module" src="./script.js"></script>
   </body>
 </html>
